# gs1-syntax-engine

./: .gitignore  CHANGES  CONTRIBUTING.md  DEVELOPERS.md  README.md  jitpack.yml
.github/linters/: .checkov.yaml  .codespellrc  .jscpd.json  .markdown-lint.yml  eslint.config.mjs  sun_checks.xml  superlinter-disabled.env  trivy.yaml  zizmor.yaml
.github/workflows/: codeql-analysis-unix.yml  codeql-analysis-windows.yml  coverity.yml  gs1encoders.yml  superlinter.yml
artifacts/nupkg/: gs1encoders-dotnet.1.0.0.nupkg
docs/: classgs1encoders_1_1GS1Encoder.html  classgs1encoders_1_1GS1EncoderDigitalLinkException.html  classgs1encoders_1_1GS1EncoderException.html  classgs1encoders_1_1GS1EncoderGeneralException.html  classgs1encoders_1_1GS1EncoderParameterException.html  classgs1encoders_1_1GS1EncoderScanDataException.html  deprecated.html  dir_9a3fbd3a535e25be4f3e2f0b3ab22642.html  dir_c348530e9ed3ac1a78a2ac6358388cd5.html  dir_cf57ea38bcf5ec7e6cdbab42086663ca.html  graph_legend.html  group__capi.html  group__cppapi.html  gs1encoders_8h.html  gs1encoders_8hpp.html  index.html  menudata.js  namespacegs1encoders.html  structgs1__encoder__init__opts.html  structgs1encoders_1_1InitOpts.html
docs/cs/: GS1.Encoders.GS1Encoder.InitOptions.html  GS1.Encoders.GS1Encoder.Symbology.html  GS1.Encoders.GS1Encoder.Validation.html  GS1.Encoders.GS1Encoder.html  GS1.Encoders.GS1EncoderDigitalLinkException.html  GS1.Encoders.GS1EncoderEncodeException.html  GS1.Encoders.GS1EncoderGeneralException.html  GS1.Encoders.GS1EncoderParameterException.html  GS1.Encoders.GS1EncoderScanDataException.html  GS1.Encoders.html  index.html  manifest.json  toc.html  toc.json  xrefmap.yml
docs/demo/: example.html  example.mjs  gs1encoder-wasm.mjs  gs1encoder-wasm.mjs.mem  gs1encoder.mjs
docs/java/: allclasses-index.html  allpackages-index.html  deprecated-list.html  element-list  help-doc.html  index-all.html  (+9 more)
maintenance/: README.md  sync-swift-package.sh
src/: gs1encoders.sln
src/android/app/src/main/cpp/: CMakeLists.txt
tests/: test_invariant_ai.c
(+260 files in other folders)
